@@ -13,6 +13,17 @@
 class Root;
 class Completion;
 
+enum class SmartFrameSurroundings {
+    hide_all,
+    hide_gaps,
+    off,
+};
+
+template <>
+struct is_finite<SmartFrameSurroundings> : std::true_type {};
+template<> Finite<SmartFrameSurroundings>::ValueList Finite<SmartFrameSurroundings>::values;
+template<> inline Type Attribute_<SmartFrameSurroundings>::staticType() { return Type::NAMES; }
+
 class Settings : public Object {
 public:
     using string = std::string;
@@ -58,7 +69,7 @@ public:
     Attribute_<bool>          gapless_grid = {"gapless_grid", true};
     Attribute_<bool>          tabbed_max = {"tabbed_max", true};
     Attribute_<bool>          hide_covered_windows = {"hide_covered_windows", false};
-    Attribute_<bool>          smart_frame_surroundings = {"smart_frame_surroundings", false};
+    Attribute_<SmartFrameSurroundings> smart_frame_surroundings = {"smart_frame_surroundings", SmartFrameSurroundings::off};
     Attribute_<bool>          smart_window_surroundings = {"smart_window_surroundings", false};
     Attribute_<unsigned long> monitors_locked = {"monitors_locked", 0};
     Attribute_<bool>          auto_detect_monitors = {"auto_detect_monitors", false};
@@ -86,4 +97,3 @@ private:
 extern Settings* g_settings;
 
 #endif
-
