@@ -29,6 +29,10 @@ Current git version
   * New setting 'ellipsis'
   * Floating clients can now be dragged between monitors via the mouse
   * Frames can be simultaneously resized in x and y direction with the mouse.
+  * The Setting 'smart_frame_surroundings' has been changed to accept the
+    following new values: 'off', 'hide_all', and 'hide_gaps'. Setting it to
+    'hide_gaps' will only hide frame gaps when applicable, 'hide_all' and 'off'
+    mirror the old behaviour with regards to 'true' and 'false'.
   * Bug fixes:
     - Update floating geometry if a client's size hints change
     - Correct alpha value handling: if compositor is detected, premultiply
